tests/baselines/reference/stringLiteralTypesInUnionTypes04.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes04.ts(4,5): error TS2322: Type 'string' is not assignable to type '"" | "foo"'.
  Type 'string' is not assignable to type '"foo"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes04.ts(5,5): error TS2322: Type 'string' is not assignable to type '"" | "foo"'.
  Type 'string' is not assignable to type '"foo"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes04.ts (2 errors) ====
    
    type T = "" | "foo";
    
    let x: T = "";
        ~
!!! error TS2322: Type 'string' is not assignable to type '"" | "foo"'.
!!! error TS2322:   Type 'string' is not assignable to type '"foo"'.
    let y: T = "foo";
        ~
!!! error TS2322: Type 'string' is not assignable to type '"" | "foo"'.
!!! error TS2322:   Type 'string' is not assignable to type '"foo"'.
    
    if (x === "") {
        let a = x;
    }
    
    if (x !== "") {
        let b = x;
    }
    
    if (x == "") {
        let c = x;
    }
    
    if (x != "") {
        let d = x;
    }
    
    if (x) {
        let e = x;
    }
    
    if (!x) {
        let f = x;
    }
    
    if (!!x) {
        let g = x;
    }
    
    if (!!!x) {
        let h = x;
    }